Fix word wrapping on long words in tweets

--- a/assets/css/3-modules/_add-tweet.scss
+++ b/assets/css/3-modules/_add-tweet.scss
@@ -40,6 +40,7 @@
         border-left: 3px solid $base-dark-blue;
         margin: $small-spacing 0 $tiny-spacing;
         padding-left: 10px;
+        word-wrap: break-word;
       }
     }
   }
